cabal-version:      2.4
name:               apsim-params
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A client for APSIM-Server, to run parameterised simulations

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alex Chapman
maintainer:         a.chapman@data61.csiro.au

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable apsim-params
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.0.0
                    , binary ^>= 0.8.9.0
                    , bytestring ^>= 0.11.1.0
                    , formatting ^>= 7.1.3
                    , network ^>= 3.1.2.7
                    , network-run ^>= 0.2.4
                    , text ^>= 2.0
    hs-source-dirs:   app
    default-language: Haskell2010
